--- a/client_packages/gui/Deathscreen/index.html
+++ b/client_packages/gui/Deathscreen/index.html
@@ -32,10 +32,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link rel="stylesheet" href="src/css/style.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://www.blackdayz.de/Library/CSS/V0_0_1/BlackCSS.css" />
-    <link rel="stylesheet" href="../../CSS/BlackCSS.css" />
-    <link rel="stylesheet" href="src/css/BlackCSS.css"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://blackdayz.github.io/BlackCSS/lib/BlackCSS.css" />
 
     <script>
         /**
@@ -69,7 +67,7 @@
 
     <div class="wrapper white">
         <div class="logo left">
-            <img src="src/img/PhenixGames_Logo_no_text_transparent.png" />
+            <img src="../_assets/img/logo/Pg_Logo_WithText_Trans.png" />
         </div>
         <div class="header">
             <h1>Pass das nächste mal besser auf!</h1>
