--- a/client_packages/gui/Deathscreen/index.html
+++ b/client_packages/gui/Deathscreen/index.html
@@ -55,6 +55,10 @@
                         revivebutton.style.opacity = "1";
                     }, 100);
                 }
+                //DEBUG -- DELETE ON PROD
+                ele.style.opacity = "0";
+                revivebutton.style.display = "block";
+                revivebutton.style.opacity = "1";
             }, 500);
 
 
