--- a/client_packages/gui/Deathscreen/index.html
+++ b/client_packages/gui/Deathscreen/index.html
@@ -55,7 +55,7 @@
 
     <div class="wrapper white">
         <div class="logo left">
-            <img src="../_assets/img/logo/Pg_Logo_WithText_Trans.png" />
+            <img src="../_assets/img/logo/web/PhenixGames_Logo_no_text.svg" />
         </div>
         <div class="header">
             <h1>Pass das nächste mal besser auf!</h1>
