--- a/client_packages/gui/login/index.html
+++ b/client_packages/gui/login/index.html
@@ -29,7 +29,7 @@
 
 
             <div class="right">
-                <img src="../_assets/img/logo/Pg_Alone_Trans.png">
+                <img src="../_assets/img/logo/web/PhenixGames_Logo_no_text.svg">
                 <span id="error_msg" class="red">
                     <!--ERROR MESSAGES-->
                 </span>
