fixed hud design

--- a/client_packages/gui/HUD/index.html
+++ b/client_packages/gui/HUD/index.html
@@ -13,7 +13,10 @@
                 <span></span>
                 <span id="player_id"></span>
             </div>
-            <span id="time"></span>
+            <div class="time">
+                <span></span>
+                <span id="time"></span>
+            </div>
         </section>
 
 
