modified:   client_packages/gui/HUD/index.html 	modified:   client_packages/gui/HUD/src/css/style.css 	new file:   client_packages/gui/HUD/src/css/voice.css

--- a/client_packages/gui/HUD/index.html
+++ b/client_packages/gui/HUD/index.html
@@ -58,12 +58,12 @@
              * 
              * */
             function manageVoice(type) {
-                if(manageVoice) {
-                    document.getElementById('voice_muted').classList.add('display-none');
-                    document.getElementById('voice_speak').classList.remove('display-none');
-                }else {
+                if(type == 1) {
                     document.getElementById('voice_muted').classList.remove('display-none');
                     document.getElementById('voice_speak').classList.add('display-none');
+                }else {
+                    document.getElementById('voice_muted').classList.add('display-none');
+                    document.getElementById('voice_speak').classList.remove('display-none');
                 }
             }
 
