--- a/client_packages/gui/deathscreen/index.html
+++ b/client_packages/gui/deathscreen/index.html
@@ -58,7 +58,7 @@
             <img src="../_assets/img/logo/web/PhenixGames_Logo_no_text.svg" />
         </div>
         <div class="header">
-            <h1>Pass das nÃ¤chste mal besser auf!</h1>
+            <h1>Pass das nächste mal besser auf!</h1>
         </div>
         <div class="quotes center">
             <span id="quotes"></span>
